--- a/app/src/main/res/layout/activity_map_check.xml
+++ b/app/src/main/res/layout/activity_map_check.xml
@@ -95,7 +95,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     android:background="@drawable/edit_text_custom"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="60dp"
+                    android:layout_marginRight="35dp"
                     android:paddingTop="13dp"
                     android:paddingLeft="13dp"
                     android:paddingRight="13dp"
@@ -105,8 +105,8 @@
                 </TextView>
                 <CheckBox
                     android:id="@+id/check_box"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     app:layout_constraintTop_toTopOf="@id/sub_text"
                     app:layout_constraintBottom_toBottomOf="@id/sub_text"
                     app:layout_constraintRight_toRightOf="parent">
