--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -75,7 +75,7 @@
 <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
     <EditText
-        android:id="@+id/nick_name_edit"
+        android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -96,8 +96,8 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginRight="7dp"
-        app:layout_constraintTop_toTopOf="@id/nick_name_edit"
-        app:layout_constraintBottom_toBottomOf="@id/nick_name_edit"
+        app:layout_constraintTop_toTopOf="@id/search"
+        app:layout_constraintBottom_toBottomOf="@id/search"
         app:layout_constraintRight_toRightOf="parent"
         android:src="@mipmap/ic_search_foreground">
     </ImageView>
