--- a/app/src/main/res/layout/activity_map_check.xml
+++ b/app/src/main/res/layout/activity_map_check.xml
@@ -11,6 +11,40 @@
         android:paddingBottom="70dp">
     </com.naver.maps.map.MapView>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/category_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/background_black"
+        android:padding="4dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/back_btn"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="12dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:src="@mipmap/ic_back_btn_foreground"
+            android:contentDescription="back_btn">
+        </ImageView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="위치 검색"
+            android:textColor="@color/white"
+            android:layout_gravity="center"
+            android:id="@+id/toolbar_title"
+            android:textSize="20sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 <!--    <androidx.constraintlayout.utils.widget.ImageFilterView-->
 <!--        android:id="@+id/user_location"-->
 <!--        android:layout_width="30dp"-->
@@ -96,7 +130,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     android:background="@drawable/edit_text_custom"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="35dp"
+                    android:layout_marginRight="10dp"
                     android:paddingTop="13dp"
                     android:paddingLeft="13dp"
                     android:paddingRight="13dp"
@@ -104,14 +138,6 @@
                     android:paddingBottom="13dp"
                     android:state_focused="true">
                 </TextView>
-                <CheckBox
-                    android:id="@+id/check_box"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    app:layout_constraintTop_toTopOf="@id/sub_text"
-                    app:layout_constraintBottom_toBottomOf="@id/sub_text"
-                    app:layout_constraintRight_toRightOf="parent">
-                </CheckBox>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
