--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -121,6 +121,7 @@
         android:paddingLeft="13dp"
         android:paddingRight="13dp"
         android:textSize="16dp"
+        android:hint="장소를 검색해보세요"
         android:paddingBottom="13dp"
         android:state_focused="true">
     </EditText>
