--- a/app/src/main/res/layout/activity_map_check.xml
+++ b/app/src/main/res/layout/activity_map_check.xml
@@ -123,21 +123,17 @@
                 android:layout_height="match_parent"
                 android:padding="10dp">
 
-                <TextView
-                    android:id="@+id/sub_text"
+                <Button
+                    android:id="@+id/check_btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:background="@drawable/edit_text_custom"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:paddingTop="13dp"
-                    android:paddingLeft="13dp"
-                    android:paddingRight="13dp"
-                    android:textSize="16dp"
-                    android:paddingBottom="13dp"
-                    android:state_focused="true">
-                </TextView>
+                    android:background="@color/orenge"
+                    android:text="여행하기"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
